@@ -550,30 +550,6 @@ void Mob::AI_Stop() {
 	safe_delete(AItarget_check_timer);
 	safe_delete(AIscanarea_timer);
 	safe_delete(AIfeignremember_timer);
-	safe_delete(PathingLOSCheckTimer);
-	safe_delete(PathingRouteUpdateTimerShort);
-	safe_delete(PathingRouteUpdateTimerLong);
-
-	attack_timer.Disable();
-	attack_dw_timer.Disable();
-	ranged_timer.Disable();
-	tic_timer.Disable();
-	mana_timer.Disable();
-	spellend_timer.Disable();
-	projectile_timer.Disable();
-	rewind_timer.Disable();
-	bindwound_timer.Disable();
-	stunned_timer.Disable();
-	spun_timer.Disable();
-	bardsong_timer.Disable();
-	gravity_timer.Disable();
-	viral_timer.Disable();
-	flee_timer.Disable();
-
-	for (int sat = 0; sat < MAX_SPECIAL_ATTACK; ++sat) {
-		if (SpecialAbilities[sat].timer)
-			SpecialAbilities[sat].timer->Disable();
-	}
 
 	hate_list.Wipe();
 }
@@ -606,6 +582,34 @@ void Client::AI_Stop() {
 	{
 		Save();
 		Disconnect();
+	}
+}
+
+// only call this on a zone shutdown event
+void Mob::AI_ShutDown() {
+	safe_delete(PathingLOSCheckTimer);
+	safe_delete(PathingRouteUpdateTimerShort);
+	safe_delete(PathingRouteUpdateTimerLong);
+
+	attack_timer.Disable();
+	attack_dw_timer.Disable();
+	ranged_timer.Disable();
+	tic_timer.Disable();
+	mana_timer.Disable();
+	spellend_timer.Disable();
+	projectile_timer.Disable();
+	rewind_timer.Disable();
+	bindwound_timer.Disable();
+	stunned_timer.Disable();
+	spun_timer.Disable();
+	bardsong_timer.Disable();
+	gravity_timer.Disable();
+	viral_timer.Disable();
+	flee_timer.Disable();
+
+	for (int sat = 0; sat < MAX_SPECIAL_ATTACK; ++sat) {
+		if (SpecialAbilities[sat].timer)
+			SpecialAbilities[sat].timer->Disable();
 	}
 }
 
